--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cross-env": "^3.2.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
-    "laravel-mix": "0.9.2",
+    "laravel-mix": "^0.9.2",
     "lodash": "^4.17.4",
     "metismenu": "^2.7.0",
     "vue": "^2.1.10"
