--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,22 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
+# Please try and keep this file organized by alphabetical order. directories first, then Single files.
 /.idea
-/.vagrant
+/app/FaveoJob
+/config/lfm.php
+/nbproject/private/
+/node_modules
+/public/error_log
+/public/hot
+/public/lb-faveo/media/
+/public/photos/
+/public/storage
+/public/uploads
+/storage/*.key
+/storage/app/attachments
+/vendor
+/vendor/phpunit/phpunit/src/Util/PHP/eval-stdin.php
+.env
 Homestead.json
 Homestead.yaml
 npm-debug.log
-.env
+.vagrant
+/*.lock
