--- a/composer.json
+++ b/composer.json
@@ -4,29 +4,53 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+        "optimize-autoloader": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4",
+        "rtconner/laravel-tagging": "^2.2",
+        "spatie/laravel-permission": "^2.3",
+        "thomaswelton/laravel-gravatar": "^1.0",
+        "watson/bootstrap-form": "^1.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^0.9",
+        "phpunit/phpunit": "^5.7",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*"
     },
+  "extra": {
+    "merge-plugin": {
+      "include": [
+        "Modules/*/composer.json"
+      ]
+    }
+  },
     "autoload": {
         "classmap": [
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+      "App\\": "app/",
+      "Modules\\": "Modules/"
         }
     },
     "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
+      "psr-4": {
+        "Tests\\": "tests/"
+      },
+        "classmap": [
+            "tests/TestCase.php"
+        ]
     },
     "scripts": {
         "post-root-package-install": [
@@ -43,10 +67,5 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
     }
 }
